--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,7 @@ img {
     align-items: center;
     padding-top: 24px;
     padding-bottom: 24px;
+    position: relative;
 }
 
 .header-nav {
@@ -58,6 +59,8 @@ img {
     align-items: center;
     margin-right: auto;
 }
+
+.header-item {}
 
 .header-list {
     display: flex;
@@ -94,11 +97,24 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2E2F42;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
 }
 
-.header-link:hover,
-.header-link:focus {
-    color: #404bbf;
+.current {}
+
+.current::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    left: 0;
+    top: 23px;
+    background: #404BBF;
+    border-radius: 2px;
+    margin-top: 20px;
 }
 
 .header-address {
@@ -111,6 +127,10 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
 }
 
 .header-mail:hover,
@@ -159,6 +179,9 @@ img {
     margin: 48px auto 0;
     display: block;
     border: none;
+    transition-property: background;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-button:hover,
@@ -232,6 +255,9 @@ img {
     padding: 12px 24px;
     border-radius: 4px;
     border: 1px solid #E7E9FC;
+    transition-property: background, color, box-shadow, border;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gal-btn:hover,
@@ -259,6 +285,9 @@ img {
     width: calc((100% - 48px) / 3); 
     box-sizing: border-box
     border: 1px solid #E7E9FC
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .gal-item:hover {
@@ -267,10 +296,43 @@ img {
 0px 2px 1px rgba(46, 47, 66, 0.08)
 }
 
+.gal-link {
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 .gal-link:hover,
 .gal-link:focus,
 .gal-link:active {
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.gal-picture-wrap {
+    position: relative;
+    overflow: hidden;
+}
+
+.gal-cover-text {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    background: #4D5AE5;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    padding: 40px 32px 164px;
+    transform: translateY(100%);
+    transition-property: transform;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.gal-item:hover .gal-cover-text {
+    transform: translateY(0);
 }
 
 .gal {
@@ -348,6 +410,9 @@ img {
     padding: 12px;
     align-items: center;
     justify-content: center;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .section-soc-link:hover, 
@@ -392,7 +457,10 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    fill: #8E8F99
+    fill: #8E8F99;
+    transition-property: border, fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .cust-link:hover, 
@@ -465,6 +533,7 @@ img {
     align-items: center;
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link:hover{
@@ -474,3 +543,54 @@ img {
 .footer-icon {
     fill: #FFFFFF
 }
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 300ms linear, visibility 300ms linear;
+}
+.modal {
+    width: 408px;
+    min-height: 576px;
+    background: #FCFCFC;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition: transform 300ms linear;
+    padding: 24px;
+    text-align: right;
+}
+
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0);
+}
+
+.modal-close {
+    display: block;
+    margin-left: auto;
+    border-radius: 50%;
+    fill: #2E2F42;
+    box-sizing: border-box;
+    background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+} 
+
+
+
+.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events:none;
+}
+
