--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,7 +103,14 @@ img {
     position: relative;
 }
 
-.current {}
+.header-link:hover,
+.header-link:focus {
+    color: #404bbf
+}
+
+.current {
+    color: #404bbf
+}
 
 .current::after {
     content: "";
@@ -111,10 +118,9 @@ img {
     width: 100%;
     height: 4px;
     left: 0;
-    top: 23px;
+    top: 42.5px;
     background: #404BBF;
     border-radius: 2px;
-    margin-top: 20px;
 }
 
 .header-address {
@@ -572,20 +578,20 @@ img {
 }
 
 .modal-close {
-    display: block;
+    display: flex;
     margin-left: auto;
     border-radius: 50%;
     fill: #2E2F42;
     box-sizing: border-box;
     background: #E7E9FC;
     border: 1px solid rgba(0, 0, 0, 0.1);
-
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
     padding: 8px;
 } 
 
+.modal-close:hover {
+    background: #404BBF;
+    fill: #FFFFFF;
+}
 
 
 .is-hidden {
